# Solster

./: .gitignore  Cargo.toml  FORMAL_VERIFICATION_STATUS.md  INTEGRATION_STATUS.md  INVARIANTS.md  KANI_PROOF_STATUS.md  LIQUIDATION_IMPLEMENTATION_PLAN.md  MODEL_TO_PRODUCTION_MAPPING.md  Makefile  PHASE1_TEST_RESULTS.md  PRODUCTION_WITHDRAWAL_AUDIT.md  README.md  SESSION_SUMMARY.md  SURFPOOL_TESTING.md  V0_DESIGN.md  VERIFICATION_WIRING_STATUS.md  build-all-bpf.sh  build-sbpf-linker.sh  run_all_minimal_proofs.sh  run_edge_proofs.sh  run_fast_proofs.sh  run_liquidation_proofs.sh  run_medium_proofs.sh  sbf-solana-solana.json
.cargo/: config.toml
crates/model_safety/: Cargo.toml
crates/model_safety/src/: helpers.rs  lib.rs  math.rs  state.rs  transitions.rs  warmup.rs
crates/proofs/kani/: COVERAGE.md  Cargo.toml  README.md
crates/proofs/kani/src/: adversary.rs  edge.rs  generators.rs  lib.rs  liquidation.rs  medium.rs  minimal.rs  properties.rs  safety.rs  sanitizer.rs
docs/archive/: E2E_IMPLEMENTATION.md  E2E_SURFPOOL_TEST_PLAN.md  LIQUIDATION_IMPLEMENTATION_PLAN.md  README.md  TEST_PLAN.md
keeper/: Cargo.toml
keeper/src/: config.rs  health.rs  main.rs  priority_queue.rs  tx_builder.rs
programs/amm/: Cargo.toml
programs/amm/src/: entrypoint.rs  instructions.rs  lib.rs  math.rs  state.rs
programs/common/src/: error.rs  fill_receipt.rs  header.rs  instruction.rs  lib.rs
programs/oracle/: Cargo.toml  build-bpf.sh
programs/oracle/src/: entrypoint.rs  instructions.rs  lib.rs  state.rs
programs/router/: Cargo.toml  build-bpf.sh
programs/router/src/: chooser.rs  entrypoint.rs  lib.rs  pda.rs
programs/router/src/instructions/: burn_lp_shares.rs  cancel_lp_orders.rs  execute_cross_slab.rs  execute_cross_slab_test.rs  initialize.rs  initialize_escrow.rs  initialize_portfolio.rs  initialize_test.rs  liquidate_user.rs  mod.rs  portfolio_escrow_test.rs
programs/router/src/liquidation/: mod.rs  oracle.rs  planner.rs
programs/router/src/state/: insurance.rs  lp_bucket.rs  mod.rs  model_bridge.rs  pnl_vesting.rs  portfolio.rs  registry.rs  vault.rs  withdrawal_limits_test.rs
programs/slab/: Cargo.toml  build-bpf.sh
programs/slab/src/: entrypoint.rs  lib.rs  tests.rs
programs/slab/src/instructions/: commit_fill.rs  initialize.rs  initialize_test.rs  mod.rs
programs/slab/src/matching/: antitoxic.rs  commit.rs  mod.rs
programs/slab/src/state/: fill_receipt.rs  header.rs  mod.rs  quote_cache.rs  slab.rs
scripts/: deploy.sh  test_e2e.sh
tests/: surfpool_harness.rs  v0_capital_efficiency.rs  v0_commit_fill.rs  v0_execute_cross_slab.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: harness.rs  lib.rs  test_bootstrap.rs  test_trading.rs  utils.rs
tests/e2e/test-ledger/: genesis.tar.bz2  snapshot-800-5M89sxCNUAP11TSNBuzdFKSTr12EMdzeuZ832dMHnAnY.tar.zst  snapshot-800-9tdupQiqYUtmzEe2mVun8FPBSE41yqpXR5PHvu7Xzusz.tar.zst  snapshot-900-6RraDhsvNf99QpGfBVP1Gc4Hd7pWSbPBcZXXkD8mstpG.tar.zst  snapshot-900-GAoj5Cgz6wrQB7i5GeLFTEBBqxax1LUEsA89MPiFUhKB.tar.zst
tests/e2e/test-ledger/accounts/run/: 0.6  11.4  12.4  17.3  22.2  24.1  6.5  700.13  900.15
tests/e2e/test-ledger/accounts/snapshot/900/: 22.2  6.5  800.14  900.15
tests/e2e/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1761175653661502  LOG.old.1761177090321184  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
tests/e2e/test-ledger/snapshot/900/: 900  status_cache
tests/e2e/test-ledger/snapshot/900/accounts_hardlinks/: account_path_0
tests/e2e/tests/: run_all.rs
tests/integration/: Cargo.toml  README.md
tests/integration/src/: lib.rs
tests/integration/tests/: e2e_tests.rs  surfpool_bootstrap.rs
