[workspace]
resolver = "2"
members = [
    "programs/router",
    "programs/slab",
    "programs/oracle",
    "programs/common",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/yourusername/percolator"

[workspace.dependencies]
pinocchio = "0.9.2"
pinocchio-log = { version = "0.5.1", default-features = false }
pinocchio-pubkey = "0.3.0"
proptest = "1.4"
solana-program = "2.1"
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full"] }

[profile.dev]
# Don't use panic = "abort" for tests
# panic = "abort"

[profile.release]
# Don't use panic = "abort" for tests - only for BPF builds
# panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# BPF-specific profile (use with cargo build-sbf)
[profile.sbf]
inherits = "release"
panic = "abort"
