[package]
name = "percolator-keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK
solana-client = "2.0"
solana-sdk = "2.0"
solana-account-decoder = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Data structures
priority-queue = "2.0"

# Configuration
toml = "0.8"

# Utilities
bs58 = "0.5"
shellexpand = "3.1"
