[package]
name = "percolator-router"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
percolator-common = { path = "../common" }
model_safety = { path = "../../crates/model_safety", default-features = false }
arrayvec = { version = "0.7", default-features = false }

[features]
default = []
bpf-entrypoint = []
