[package]
name = "percolator-e2e-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
solana-client = "2.3"
solana-sdk = "2.3"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pinocchio = "0.9.2"

[[bin]]
name = "calculate_size"
path = "calculate_size.rs"
