[package]
name = "percolator-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Programs are not used in simulated tests
# percolator-router = { path = "../../programs/router" }
# percolator-slab = { path = "../../programs/slab" }
# percolator-oracle = { path = "../../programs/oracle" }

solana-program.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true

[dev-dependencies]
